# Zadaci_Martin_Vezbi

./: CMakeLists.txt  artikl.cpp  artikl.h  covek.cpp  covek.h  datum.cpp  datum.h  dropki.cpp  dropki.h  kvadrat.cpp  kvadrat.h  main.cpp  pantoloni.cpp  pantoloni.h  pravoagolnik.cpp  pravoagolnik.h  ptici.cpp  ptici.h  stedac.cpp  stedac.h  zadaca_1.cpp  zadaca_1.h  zivotno.cpp  zivotno.h  zivotno_virtual.cpp  zivotno_virtual.h
